🔧 chore: Increase code coverage and resolve SonarCloud issues